# telememo

./: .env.example  .gitignore  CLAUDE.md  README.md  claude.md  config.example.py  plag-tool  pyproject.toml  todo.md
scripts/: debug_messages.py
telememo/: __init__.py  cli.py  color.py  config.py  core.py  db.py  telegram.py  types.py  utils.py  viewer.py
tests/: __init__.py  conftest.py  test_integration.py
